app/app.css
/* ... */
:root {
	--foreground-rgb: 0, 0, 0;
	--background-start-rgb: 214, 219, 220;
	--background-end-rgb: 255, 255, 255;
	--radius: 0.625rem;
	--background: oklch(1 0 0);
	--foreground: oklch(0.145 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.145 0 0);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.145 0 0);
	--primary: oklch(0.205 0 0);
	--primary-foreground: oklch(0.985 0 0);
	--secondary: oklch(0.97 0 0);
	--secondary-foreground: oklch(0.205 0 0);
	--muted: oklch(0.97 0 0);
	--muted-foreground: oklch(0.556 0 0);
	--accent: oklch(0.97 0 0);
	--accent-foreground: oklch(0.205 0 0);
	--destructive: oklch(0.577 0.245 27.325);
	--border: oklch(0.922 0 0);
	--input: oklch(0.922 0 0);
	--ring: oklch(0.708 0 0);
	--chart-1: oklch(0.646 0.222 41.116);
	--chart-2: oklch(0.6 0.118 184.704);
	--chart-3: oklch(0.398 0.07 227.392);
	--chart-4: oklch(0.828 0.189 84.429);
	--chart-5: oklch(0.769 0.188 70.08);
	--sidebar: var(--color-mantle);
	--sidebar-foreground: oklch(0.145 0 0);
	--sidebar-primary: oklch(0.205 0 0);
	--sidebar-primary-foreground: oklch(0.985 0 0);
	--sidebar-accent: oklch(0.97 0 0);
	--sidebar-accent-foreground: oklch(0.205 0 0);
	--sidebar-border: var(--color-surface-1);
	--sidebar-ring: oklch(0.708 0 0);
}

body {
	color: white;
	background: var(--color-mantle);

	display: flex;
	flex-direction: column;
	/* gap: 10px; */

	width: 100vw;
	min-height: 100vh;

	overflow: overlay;
	overflow-x: hidden;

	font-family: "Inter", sans-serif;
}

@layer utilities {
	.text-balance {
		text-wrap: balance;
	}
}

button {
	cursor: pointer;
}

.nav {
	font-size: 0.8em;
	font-weight: bold;
}

.nav:not(.navHighlighted) span {
	display: none;
}

.episodeHighlighted {
	background-color: #363753;
	color: #dbdcff;
}

.post:hover:has(.userFlair:not(:hover)) .postTitle,
.post:hover:has(.userFlair:not(:hover)) .postDesc {
	color: #fcd980;
}

.post:hover:has(.userFlair:hover) {
	outline: none;
}

.gridLoop {
	background-size: 40px 40px;
	background-image: linear-gradient(to right, black 1px, transparent 1px),
		linear-gradient(to bottom, black 1px, transparent 1px);

	animation: linear loopGrid 500ms infinite;
}

@keyframes loopGrid {
	from {
		background-position: 0 0;
	}

	to {
		background-position: 40px 40px;
	}
}

@keyframes skele {
	0% {
		background-color: #25263a;
	}
	100% {
		background-color: #2b2c43;
	}
}

@keyframes skele2 {
	0% {
		opacity: 100%;
	}
	100% {
		opacity: 0%;
	}
}

.skeleton {
	animation: skele ease-in-out 1000ms infinite alternate;
}

.skeleton2 {
	animation: skele2 ease-in-out 1000ms infinite alternate;
}

@keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@keyframes pop {
	0% {
		scale: 0.9;
	}
	100% {
		scale: 1;
	}
}

.pop {
	animation: pop ease-in-out 200ms forwards;
}

.fadeIn {
	animation: fadeIn ease-in-out 200ms forwards;
}

.card-gradient {
	background-image: linear-gradient(
		to right,
		#fdd4ff 0%,
		#fee2c2 33%,
		#ffd9cf 67%,
		#ffb3b4 100%
	);
}

input[type="checkbox"] {
	position: relative;
	appearance: none;
	border-radius: 100px;
	border: solid 3px #363753;
	width: 50px;
	height: 24px;
	transition: ease-in-out 200ms;
	cursor: pointer;
}

input[type="checkbox"]:before {
	content: "";
	position: absolute;
	top: 4px;
	left: 4px;
	width: 10px;
	height: 10px;
	background-color: #363753;
	border-radius: 5px;
	transition: ease-in-out 200ms;
}

input[type="checkbox"].darker {
	position: relative;
	appearance: none;
	border-radius: 100px;
	border: solid 3px #2b2c43;
	width: 50px;
	height: 24px;
	transition: ease-in-out 200ms;
	cursor: pointer;
}

input[type="checkbox"].darker:before {
	content: "";
	position: absolute;
	top: 4px;
	left: 4px;
	width: 10px;
	height: 10px;
	background-color: #2b2c43;
	border-radius: 5px;
	transition: ease-in-out 200ms;
}

input[type="checkbox"]:checked {
	border-color: #bdbfe3;
}

input[type="checkbox"]:checked:before {
	transform: translateX(26px);
	background-color: #bdbfe3;
}

.dragdrop {
	font-size: 0;

	display: flex;
	justify-content: center;
	align-items: center;

	user-select: none;
}

.dragdrop::before {
	position: relative;
	content: "Drag and drop or click here";
	color: #56587d;
	text-align: center;
	height: 100%;

	display: flex;
	align-items: center;
	justify-content: center;

	font-size: 1rem;
}

.dragdrop::-webkit-file-upload-button {
	display: none;
}

[contenteditable="plaintext-only"]:empty:before {
	content: attr(data-placeholder);
	pointer-events: none;
	opacity: 50%;
}

input[type="number"]::placeholder {
	color: #dbdcff;
	opacity: 30%;
}

label {
	pointer-events: none;
}

.file-input::-webkit-file-upload-button {
	visibility: hidden;
}

.file-input::before {
	content: "";
	position: absolute;
	width: 100%;
	height: 100%;

	background-image: url(/image.svg);
	background-repeat: no-repeat;
	background-position: center center;

	padding: 5px;
	user-select: none;
	cursor: pointer;

	box-sizing: border-box;
}

.file-input {
	position: relative;
	color: transparent;
	aspect-ratio: 1 / 1;
	width: max-content;
	height: 40px;
	border-radius: 9999px;

	transition: ease-in-out 100ms;
}

.file-input:hover {
	background-color: #363753;
}

/*Scrollbar*/

::-webkit-scrollbar {
	width: 8px;
	background-color: var(--color-base);
	/* display: none; */
}

/* Track */

::-webkit-scrollbar-track {
	/* margin-top: 25px;
	margin-bottom: 25px; */
	visibility: 0;
}

/* Handle */

::-webkit-scrollbar-thumb {
	background: #56587d;
	border-radius: 10px;
}

@keyframes osuSpinnerKurwa {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

@keyframes leSpin {
	0% {
		stroke-dashoffset: 66.7;
		transform: scale(1, 1);
	}
	50% {
		stroke-dashoffset: 0;
		transform: scale(1, 1);
	}
	50.0001% {
		transform: scale(1, -1) translateY(-30px);
	}
	99.9999% {
		stroke-dashoffset: 66.7;
		transform: scale(1, -1) translateY(-30px);
	}
	100% {
		transform: scale(1, 1);
	}
}

@keyframes showPlayer {
	from {
		display: none;
		opacity: 0;
	}
	to {
		display: flex;
		opacity: 1;
	}
}
/* ... */

